--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </nav>
     </div>
     <div class="certDiv">
-        <a href="http://training.digidesign.com/listings/listing_admin/user_cert4.cfm?id=4273958&courseid=428" target="blank"><img src="/images/logos/avidUserLogo.png" alt="" class="uCertLogo"></a>
+        <a href="https://training.digidesign.com/listings/listing_admin/user_cert4.cfm?id=4273958&courseid=428" target="blank"><img src="/images/logos/avidUserLogo.png" alt="" class="uCertLogo"></a>
         <div class="certLine"></div>
-        <a href="http://training.digidesign.com/listings/listing_admin/user_cert4.cfm?id=4273958&courseid=228" target="blank"><img src="/images/logos/avidOperatorLogo.png" alt="" class="opCertLogo"></a>
+        <a href="https://training.digidesign.com/listings/listing_admin/user_cert4.cfm?id=4273958&courseid=228" target="blank"><img src="/images/logos/avidOperatorLogo.png" alt="" class="opCertLogo"></a>
     </div>
     <footer class="pageFooter">Coded & Designed by Michael Pierluissi, 2022. All Rights Reserved.</footer>
 </body>
